# easy-agent

./: CHANGELOG.md  README.md  README.zh-CN.md  easy-agent.yml  pyproject.toml
configs/: harness.example.yml  longrun.example.yml
scripts/: benchmark_modes.py
scripts/windows/: easy-agent.bat  easy-agent.ps1
skills/examples/python_echo/: SKILL.md  (+2 more)
src/agent_cli/: __init__.py  app.py  shared.py
src/agent_common/: __init__.py  models.py  schema_utils.py  tools.py  version.py
src/agent_config/: __init__.py  app.py
src/agent_graph/: __init__.py  orchestrator.py  scheduler.py
src/agent_integrations/: __init__.py  executors.py  federation.py  federation_security.py  github_automation.py  guardrails.py  human_loop.py  mcp.py  plugins.py  sandbox.py  skills.py  storage.py  workbench.py
src/agent_protocols/: __init__.py  client.py
src/agent_runtime/: __init__.py  benchmark.py  harness.py  longrun.py  public_eval.py  real_network_eval.py  runtime.py
src/easy_agent/: __init__.py  benchmark.py  cli.py  config.py  mcp.py  plugins.py  runtime.py  sandbox.py  skills.py  storage.py
tests/: test_benchmark.py  test_mcp.py  test_plugins.py  test_sandbox.py  test_skills.py
tests/integration/: test_harness_real.py  test_longrun_real.py  test_real_network_eval.py
tests/unit/: test_benchmark.py  test_cli_general.py  test_config.py  test_executors.py  test_federation.py  test_github_automation.py  test_graph.py  test_guardrails.py  test_harness.py  test_mcp.py  test_plugins.py  test_protocols.py  test_public_eval.py  test_sandbox.py  test_skills.py  test_storage.py  test_teams.py  test_workbench.py
(+10 files in other folders)
